--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,17 @@
        <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
+  
+      <plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk1.7.0_79\bin\javac</executable>
+				</configuration>
+			</plugin>
 
   <dependencies>
     <dependency>
